--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,4 @@ jobs:
           java-version: ${{ env.JAVA_VERSION }}
       - name: Maven Clean Package
         run: |
-          ./mvn --no-transfer-progress clean package -P build-frontend
+          ./mvnw --no-transfer-progress clean package -P build-frontend
