--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,7 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/amigostest
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=password 
 spring.jpa.hibernate.ddl-auto=update
